# lattice

./: Cargo.toml  README.md  pre_benchmark.sh
lattice-core/: Cargo.toml
lattice-core/src/: arena.rs  lib.rs
lattice-core/src/analyzer/: mod.rs  normalizer.rs  tokenizer.rs  trigram.rs
lattice-core/src/index/: api.rs  builder.rs  mod.rs  scoring.rs  search.rs  stats.rs  types.rs
lattice-types/: Cargo.toml
lattice-types/src/: compression.rs  doc.rs  lib.rs  search.rs  trigram.rs
