[package]
name = "lattice-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <kumarashutosh34169@gmail.com>"]
description = "High-performance fuzzy search engine core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bravo1goingdark/lattice"

[dependencies]
lattice-types = { path = "../lattice-types" }
smallvec = "1.13"
rustc-hash = "2.1"
memchr = "2.7"
